MA Expansion plan
